syntax = "proto3";

package task;

option go_package = "github.com/yuisofull/goload/internal/task/pb;pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

service TaskService {
  // Creates a new file download task.
  rpc CreateTask(CreateTaskRequest) returns (TaskResponse);

  // Retrieves a task by its ID.
  rpc GetTask(GetTaskRequest) returns (TaskResponse);

  // Lists all tasks based on a filter.
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);

  // Deletes a task by its ID.
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);

  // Starts a previously created task.
  rpc StartTask(StartTaskRequest) returns (StartTaskResponse);

  // Pauses a running task.
  rpc PauseTask(PauseTaskRequest) returns (PauseTaskResponse);

  // Resumes a paused task.
  rpc ResumeTask(ResumeTaskRequest) returns (ResumeTaskResponse);

  // Cancels a task.
  rpc CancelTask(CancelTaskRequest) returns (CancelTaskResponse);

  // Retries a failed task.
  rpc RetryTask(RetryTaskRequest) returns (RetryTaskResponse);

  rpc UpdateTaskStoragePath(UpdateTaskStoragePathRequest) returns (TaskResponse);
  rpc UpdateTaskStatus(UpdateTaskStatusRequest) returns (TaskResponse);
  rpc UpdateTaskProgress(UpdateTaskProgressRequest) returns (TaskResponse);
  rpc UpdateTaskError(UpdateTaskErrorRequest) returns (TaskResponse);
  rpc CompleteTask(CompleteTaskRequest) returns (TaskResponse);

  rpc GetFileInfo(GetFileInfoRequest) returns (GetFileInfoResponse);
  rpc CheckFileExists(CheckFileExistsRequest) returns (CheckFileExistsResponse);

  rpc GetTaskProgress(GetTaskProgressRequest) returns (GetTaskProgressResponse);
}


message Task {
  uint64 id = 1;
  string name = 2;
  string description = 3;
  string source_url = 4;
  SourceType source_type = 5;
  AuthConfig source_auth = 6;
  StorageType storage_type = 7;
  string storage_path = 8;
  TaskStatus status = 9;
  FileInfo file_info = 10;
  DownloadProgress progress = 11;
  DownloadOptions options = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
  google.protobuf.Timestamp completed_at = 15;
  string error = 16;
  int32 retry_count = 17;
  int32 max_retries = 18;
  repeated string tags = 19;
  google.protobuf.Struct metadata = 20;
  uint64 of_account_id = 21;
}

message FileInfo {
  string file_name = 1;
  int64 file_size = 2;
  string content_type = 3;
  string md5_hash = 4;
  string storage_key = 5;
  google.protobuf.Timestamp stored_at = 6;
}

enum SourceType {
  HTTP = 0;
  HTTPS = 1;
  FTP = 2;
  SFTP = 3;
  BITTORRENT = 4;
}

enum StorageType {
  LOCAL = 0;
  MINIO = 1;
  S3 = 2;
}

enum TaskStatus {
  PENDING = 0;
  DOWNLOADING = 1;
  STORING = 2;
  COMPLETED = 3;
  FAILED = 4;
  CANCELLED = 5;
  PAUSED = 6;
}

message DownloadProgress {
  int64 bytes_downloaded = 1;
  int64 total_bytes = 2;
  int64 speed_bps = 3;
  int64 eta_seconds = 4;
  double percentage = 5;
}

message DownloadOptions {
  int64 chunk_size = 1;
  int32 max_retries = 2;
  int64 timeout_seconds = 3;
  bool resume = 4;
  string checksum_type = 5;
}

message AuthConfig {
  string username = 1;
  string password = 2;
  string token = 3;
  map<string, string> headers = 4;
}

message CreateTaskRequest {
  uint64 of_account_id = 1;
  string name = 2;
  string description = 3;
  string source_url = 4;
  SourceType source_type = 5;
  AuthConfig source_auth = 6;
  DownloadOptions options = 7;
  int32 max_retries = 8;
  repeated string tags = 9;
  google.protobuf.Struct metadata = 10;
}

message TaskResponse {
  Task task = 1;
}

message GetTaskRequest {
  uint64 id = 1;
}

message ListTasksRequest {
  TaskFilter filter = 1;
  int32 offset = 2;
  int32 limit = 3;
  string sort_by = 4;
  bool sort_asc = 5;
}

message ListTasksResponse {
  repeated Task tasks = 1;
  int32 total = 2;
}

message TaskFilter {
  uint64 of_account_id = 1;
  repeated TaskStatus status = 2;
  repeated string tags = 3;
  repeated SourceType source_type = 4;
  TimeRange created_at = 5;
  string search = 6;
}

message TimeRange {
  google.protobuf.Timestamp from = 1;
  google.protobuf.Timestamp to = 2;
}

message DeleteTaskRequest {
  uint64 id = 1;
}

message DeleteTaskResponse {
  string message = 1;
}

message StartTaskRequest {
  uint64 id = 1;
}

message StartTaskResponse {
  string message = 1;
}

message PauseTaskRequest {
  uint64 id = 1;
}

message PauseTaskResponse {
  string message = 1;
}

message ResumeTaskRequest {
  uint64 id = 1;
}

message ResumeTaskResponse {
  string message = 1;
}

message CancelTaskRequest {
  uint64 id = 1;
}

message CancelTaskResponse {
  string message = 1;
}

message RetryTaskRequest {
  uint64 id = 1;
}

message RetryTaskResponse {
  string message = 1;
}

message UpdateTaskStoragePathRequest {
  uint64 id = 1;
  string storage_path = 2;
}

message UpdateTaskStatusRequest {
  uint64 id = 1;
  TaskStatus status = 2;
}

message UpdateTaskProgressRequest {
  uint64 id = 1;
  DownloadProgress progress = 2;
}

message UpdateTaskErrorRequest {
  uint64 id = 1;
  string error = 2;
}

message CompleteTaskRequest {
  uint64 id = 1;
  FileInfo file_info = 2;
}

message GetFileInfoRequest {
  uint64 task_id = 1;
}

message GetFileInfoResponse {
  FileInfo file_info = 1;
}

message CheckFileExistsRequest {
  uint64 task_id = 1;
}

message CheckFileExistsResponse {
  bool exists = 1;
}

message GetTaskProgressRequest {
  uint64 task_id = 1;
}

message GetTaskProgressResponse {
  DownloadProgress progress = 1;
}
